--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,61 @@
-/* You can add global styles to this file, and also import other style files */
+html,
+body {
+    height: 100%;
+}
+
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.content-container{
+    max-width: 748px;
+    width: 100%;
+    align-items: center;
+}
+
+.blackButton{
+    background-color: black!important;
+    border-radius: 10px !important;
+    margin-top: 2px;
+    margin-bottom: 2px;
+}
+
+.form{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.my-2{
+    margin-top: 2px;
+    margin-bottom: 2px;
+}
+
+.my-4{
+    margin-top: 4px;
+    margin-bottom: 4px;
+}
+
+.w-75{
+    width: 75%;
+}
+
+.w-100{
+    width: 100%;
+}
+
+.bg-green{
+    background-color: green;
+}
+
+.center{
+    display: flex;
+    justify-content: center;
+}
